--- a/main_workflow.ipynb
+++ b/main_workflow.ipynb
@@ -34,11 +34,11 @@
         "   !gh auth login -w"
       ],
       "metadata": {
-        "id": "v6BuA3xUv9YL",
-        "outputId": "ede6ea9d-3104-45e0-dc4e-2e31f814198a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "v6BuA3xUv9YL",
+        "outputId": "ede6ea9d-3104-45e0-dc4e-2e31f814198a"
       },
       "execution_count": 9,
       "outputs": [
@@ -76,19 +76,41 @@
       "cell_type": "code",
       "source": [
         "import os\n",
+        "import subprocess\n",
         "\n",
-        "# Install GitHub CLI (if not already installed)\n",
-        "print(\"Ensuring GitHub CLI is installed...\")\n",
-        "!apt-get update > /dev/null && apt-get install -y gh > /dev/null\n",
-        "print(\"GitHub CLI installed.\")\n",
+        "# Check if already logged into GitHub\n",
+        "print(\"Checking GitHub authentication status...\")\n",
+        "try:\n",
+        "    result = subprocess.run(['gh', 'auth', 'status'], capture_output=True, text=True)\n",
+        "    if \"Logged in to github.com\" in result.stdout:\n",
+        "        print(\"Already logged in to GitHub.\")\n",
+        "    else:\n",
+        "        # Install GitHub CLI (if not already installed)\n",
+        "        print(\"Ensuring GitHub CLI is installed...\")\n",
+        "        !apt-get update > /dev/null && apt-get install -y gh > /dev/null\n",
+        "        print(\"GitHub CLI installed.\")\n",
         "\n",
-        "# Authenticate with GitHub (should use cached credentials)\n",
-        "print(\"\\nAuthenticating with GitHub CLI (use cached credentials if available)...\")\n",
-        "!gh auth login --hostname github.com -w\n",
+        "        # Authenticate with GitHub (should use cached credentials)\n",
+        "        print(\"\\nAuthenticating with GitHub CLI (use cached credentials if available)...\")\n",
+        "        !gh auth login --hostname github.com -w\n",
         "\n",
-        "# Explicitly configure git to use gh as the credential helper\n",
-        "print(\"\\nConfiguring git credential helper using 'gh auth setup-git'...\")\n",
-        "!gh auth setup-git\n",
+        "        # Explicitly configure git to use gh as the credential helper\n",
+        "        print(\"\\nConfiguring git credential helper using 'gh auth setup-git'...\")\n",
+        "        !gh auth setup-git\n",
+        "except Exception as e:\n",
+        "    # If gh command fails, install and authenticate\n",
+        "    print(f\"Error checking auth status: {e}\")\n",
+        "    print(\"Ensuring GitHub CLI is installed...\")\n",
+        "    !apt-get update > /dev/null && apt-get install -y gh > /dev/null\n",
+        "    print(\"GitHub CLI installed.\")\n",
+        "\n",
+        "    # Authenticate with GitHub (should use cached credentials)\n",
+        "    print(\"\\nAuthenticating with GitHub CLI (use cached credentials if available)...\")\n",
+        "    !gh auth login --hostname github.com -w\n",
+        "\n",
+        "    # Explicitly configure git to use gh as the credential helper\n",
+        "    print(\"\\nConfiguring git credential helper using 'gh auth setup-git'...\")\n",
+        "    !gh auth setup-git\n",
         "\n",
         "# --- Attempt standard git clone AFTER configuration ---\n",
         "print(\"\\nAttempting git clone...\")\n",
@@ -122,26 +144,66 @@
         "    print(\"Please check if the repository was cloned successfully.\")"
       ],
       "metadata": {
-        "id": "8cbs6Ga_yCiY",
-        "outputId": "8dfb533b-77a7-49b8-bd4e-7cab5828538e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8cbs6Ga_yCiY",
+        "outputId": "bed9e697-ac88-41af-8693-35f3caa1c3f5"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Checking GitHub authentication status...\n",
             "Ensuring GitHub CLI is installed...\n",
             "W: Skipping acquire of configured file 'main/source/Sources' as repository 'https://r2u.stat.illinois.edu/ubuntu jammy InRelease' does not seem to provide it (sources.list entry misspelt?)\n",
             "GitHub CLI installed.\n",
             "\n",
             "Authenticating with GitHub CLI (use cached credentials if available)...\n",
             "\n",
-            "\u001b[0;33m!\u001b[0m First copy your one-time code: \u001b[0;1;39m79BD-77C3\u001b[0m\n",
-            "- \u001b[0;1;39mPress Enter\u001b[0m to open github.com in your browser... "
+            "\u001b[0;33m!\u001b[0m First copy your one-time code: \u001b[0;1;39m5ABD-8364\u001b[0m\n",
+            "- \u001b[0;1;39mPress Enter\u001b[0m to open github.com in your browser... \n",
+            "/usr/bin/xdg-open: 882: www-browser: not found\n",
+            "/usr/bin/xdg-open: 882: links2: not found\n",
+            "/usr/bin/xdg-open: 882: elinks: not found\n",
+            "/usr/bin/xdg-open: 882: links: not found\n",
+            "/usr/bin/xdg-open: 882: lynx: not found\n",
+            "/usr/bin/xdg-open: 882: w3m: not found\n",
+            "xdg-open: no method available for opening 'https://github.com/login/device'\n",
+            "\u001b[0;31m!\u001b[0m Failed opening a web browser at https://github.com/login/device\n",
+            "  exit status 3\n",
+            "  Please try entering the URL in your browser manually\n",
+            "\u001b[0;32m✓\u001b[0m Authentication complete. \u001b[0;1;39mPress Enter\u001b[0m to continue...\n",
+            "\n",
+            "\u001b[0;32m✓\u001b[0m Logged in as \u001b[0;1;39msaikanam\u001b[0m\n",
+            "\n",
+            "Configuring git credential helper using 'gh auth setup-git'...\n",
+            "\n",
+            "Attempting git clone...\n",
+            "fatal: destination path '/content/openRoad-dr-training' already exists and is not an empty directory.\n",
+            "\n",
+            "Repository seems to be cloned successfully into /content/openRoad-dr-training\n",
+            "/content/openRoad-dr-training\n",
+            "Current working directory: /content/openRoad-dr-training\n",
+            "\n",
+            "Listing repository contents:\n",
+            "total 124\n",
+            "drwxr-xr-x 7 root root  4096 Apr  7 19:59 .\n",
+            "drwxr-xr-x 1 root root  4096 Apr  7 19:50 ..\n",
+            "drwxr-xr-x 2 root root  4096 Apr  7 19:50 academic_papers\n",
+            "drwxr-xr-x 3 root root  4096 Apr  7 19:50 .cursor\n",
+            "-rw-r--r-- 1 root root  7068 Apr  7 19:50 dataset_test.md\n",
+            "drwxr-xr-x 8 root root  4096 Apr  7 20:00 .git\n",
+            "-rw-r--r-- 1 root root  1010 Apr  7 19:59 .gitignore\n",
+            "-rw-r--r-- 1 root root 12914 Apr  7 19:50 implementation.md\n",
+            "-rw-r--r-- 1 root root 11156 Apr  7 19:59 main_workflow.ipynb\n",
+            "-rw-r--r-- 1 root root 13190 Apr  7 19:50 plan.md\n",
+            "-rw-r--r-- 1 root root   118 Apr  7 19:50 requirements.txt\n",
+            "drwxr-xr-x 2 root root  4096 Apr  7 19:50 some_old_utils\n",
+            "drwxr-xr-x 5 root root  4096 Apr  7 19:50 src\n",
+            "-rw-r--r-- 1 root root 35957 Apr  7 19:50 test_dataset.py\n"
           ]
         }
       ]
@@ -157,13 +219,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
-        "id": "WNTiWcHktJhs",
-        "outputId": "2a50b7ea-d88a-4575-8d2a-daa88029ed86",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WNTiWcHktJhs",
+        "outputId": "9b89fbe3-671b-419e-a153-f26e16078474"
       },
       "outputs": [
         {
@@ -173,9 +235,18 @@
             "Running in Google Colab\n",
             "Repository openRoad-dr-training already exists in /content. Pulling latest changes...\n",
             "/content/openRoad-dr-training\n",
+            "remote: Enumerating objects: 5, done.\u001b[K\n",
+            "remote: Counting objects: 100% (5/5), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
+            "remote: Total 3 (delta 1), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Unpacking objects: 100% (3/3), 10.77 KiB | 5.38 MiB/s, done.\n",
             "From https://github.com/saikanam/openRoad-dr-training\n",
             " * branch            main       -> FETCH_HEAD\n",
-            "Already up to date.\n",
+            "   4409b99..00f147b  main       -> origin/main\n",
+            "Updating 4409b99..00f147b\n",
+            "Fast-forward\n",
+            " main_workflow.ipynb | 1201 \u001b[32m+++++++++++++++++++++++++++++++++++++++++++++++++++++\u001b[m\u001b[31m------------------\u001b[m\n",
+            " 1 file changed, 901 insertions(+), 300 deletions(-)\n",
             "\n",
             "Current directory: /content/openRoad-dr-training\n"
           ]
@@ -228,12 +299,12 @@
       "cell_type": "code",
       "execution_count": 26,
       "metadata": {
-        "id": "Fvlf8YSdtJhu",
-        "outputId": "b27769ff-b0e7-4a92-c025-074722a9faea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "Fvlf8YSdtJhu",
+        "outputId": "b27769ff-b0e7-4a92-c025-074722a9faea"
       },
       "outputs": [
         {
@@ -638,12 +709,12 @@
       "cell_type": "code",
       "execution_count": 25,
       "metadata": {
-        "id": "P9pIEi0stJhu",
-        "outputId": "88e74c58-25d7-4071-a5a5-c5dce255f1de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 408
-        }
+        },
+        "id": "P9pIEi0stJhu",
+        "outputId": "88e74c58-25d7-4071-a5a5-c5dce255f1de"
       },
       "outputs": [
         {
